--- a/combobox.html
+++ b/combobox.html
@@ -53,8 +53,8 @@
 
     <script src="EventModel.js"></script>
     <script>
-        var model = new edm.Model({
-            ".combo": new edm.Model({
+        var model = new EventModel({
+            ".combo": new EventModel({
                 "input": {
                     value: function(e) {
                         this.value = e.data;
